Apply suggestion from @chrisgeo
Signed-off-by: Chris George <chrisgeo@users.noreply.github.com>

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,7 +32,7 @@ jobs:
         black --check .
 
     - name: Run isort (import sort check)
-      continue_on_error: true
+      continue-on-error: true
       run: |
         isort --check-only .
 
