--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: ./data/postgres
+      device: ./data/mergestat
       o: bind
   mongo_data:
     driver: local
@@ -27,9 +27,10 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: mergestat
+      PGDATA: /var/lib/postgresql/data
     ports:
-      - "5333:5432"
+      - "5555:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
   stats:
