--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-# sqlalchemy.url = ${DB_CONN_STRING}
+sqlalchemy.url = postgresql+asyncpg://postgres:postgres@localhost:5555/postgres
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
