--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,12 @@ volumes:
       type: none
       device: ./data/mongo
       o: bind
+  clickhouse_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: ./data/clickhouse
+      o: bind
 services:
   mongo:
     image: mongo:latest
@@ -33,6 +39,24 @@ services:
       - "5555:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/
+  clickhouse:
+    image: clickhouse/clickhouse-server:latest
+    container_name: clickhouse
+    restart: on-failure
+    environment:
+      CLICKHOUSE_LISTEN_HOST: 0.0.0.0
+      CLICKHOUSE_USER: ch
+      CLICKHOUSE_PASSWORD: ch
+      CLICKHOUSE_DB: stats
+    ports:
+      - "8123:8123"
+      - "9000:9000"
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+    volumes:
+      - clickhouse_data:/var/lib/clickhouse
   stats:
     image: python:alpine
     environment:
