--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,18 +1,27 @@
 name: Integration Tests
 env:
-    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+    GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+    GITLAB_TOKEN: ${{ secrets.GL_TOKEN }}
 on:
     push:
         branches: [ "main" ]
     workflow_dispatch:
 jobs:
     integration:
-        if: ${{ env.GITHUB_TOKEN != '' || env.GITLAB_TOKEN != '' }}
         name: Integration Tests (conditional)
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+
+            - name: Skip if no tokens
+              run: |
+                  if [ -z "$GITHUB_TOKEN" ] && [ -z "$GITLAB_TOKEN" ]; then
+                    echo "No tokens found — skipping integration tests"
+                    exit 0
+                  fi
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+                  GITLAB_TOKEN: ${{ secrets.GL_TOKEN }}
 
             - name: Set up Python
               uses: actions/setup-python@v5
@@ -26,8 +35,8 @@ jobs:
 
             - name: Run integration tests
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                  GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+                  GITLAB_TOKEN: ${{ secrets.GL_TOKEN }}
                   GITLAB_URL: ${{ secrets.GITLAB_URL }}
                   SKIP_INTEGRATION_TESTS: ${{ secrets.SKIP_INTEGRATION_TESTS }}
               run: |
