--- a/grafana/provisioning/dashboards/dashboards.yaml
+++ b/grafana/provisioning/dashboards/dashboards.yaml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 providers:
-  - name: mergestat-syncs
+  - name: dev-health-ops
     orgId: 1
     folder: Developer Health
     type: file
@@ -9,4 +9,3 @@ providers:
     editable: true
     options:
       path: /var/lib/grafana/dashboards
-
