fix(grafana): update query format from string to integer
Resolves 'error unmarshaling query JSON' by updating the 'format' field in ClickHouse queries from 'time_series'/'table' to 0/1, adhering to the updated sqlutil.FormatQueryOption type.

--- a/grafana/dashboards/investment_areas.json
+++ b/grafana/dashboards/investment_areas.json
@@ -91,7 +91,7 @@
       "targets": [
         {
           "datasource": "ClickHouse",
-          "format": "time_series",
+          "format": 0,
           "group": [],
           "metricType": "any",
           "orderByKey": "time",
@@ -163,7 +163,7 @@
       "targets": [
         {
           "datasource": "ClickHouse",
-          "format": "table",
+          "format": 1,
           "group": [],
           "metricType": "any",
           "orderByKey": "units",
