--- a/compose.yml
+++ b/compose.yml
@@ -34,6 +34,7 @@ services:
       GF_AUTH_ANONYMOUS_ENABLED: true
       GF_AUTH_ANONYMOUS_ORG_ROLE: Admin
       GF_AUTH_DISABLE_LOGIN_FORM: true
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: devhealth-dev-health-panels-panel
     ports:
       - "3000:3000"
     depends_on:
@@ -42,6 +43,7 @@ services:
       - ./grafana/datasources:/etc/grafana/provisioning/datasources:ro
       - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
       - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
+      - ./grafana/plugins/dev-health-panels:/var/lib/grafana/plugins/dev-health-panels
   mongo:
     image: mongo:latest
     container_name: mongo
