--- a/grafana/dashboards/investment_areas.json
+++ b/grafana/dashboards/investment_areas.json
@@ -35,7 +35,7 @@
         {
           "refId": "A",
           "rawQuery": true,
-          "rawSql": "SELECT investment_area AS source, project_stream AS target, sum(delivery_units) AS value FROM stats.v_investment_flow_edges WHERE team_id IN (${team_id:sqlstring}) AND day >= toDate(toDateTime(intDiv($__from, 1000))) AND day < toDate(toDateTime(intDiv($__to, 1000))) GROUP BY source, target HAVING value > 0 ORDER BY value DESC"
+          "rawSql": "SELECT source, target, sum(delivery_units) AS value FROM stats.v_investment_flow_edges WHERE team_id IN (${team_id:sqlstring}) AND day >= toDate(toDateTime(intDiv($__from, 1000))) AND day < toDate(toDateTime(intDiv($__to, 1000))) GROUP BY source, target HAVING value > 0 ORDER BY value DESC"
         }
       ],
       "options": {
@@ -44,7 +44,7 @@
           "timeWindowDays": 30,
           "valueField": "value",
           "sourceField": "source",
-          "targetField": "project_stream",
+          "targetField": "target",
           "dayField": "day"
         }
       }
