--- a/compose.yml
+++ b/compose.yml
@@ -35,6 +35,9 @@ services:
       GF_AUTH_ANONYMOUS_ORG_ROLE: Admin
       GF_AUTH_DISABLE_LOGIN_FORM: true
       GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: devhealth-dev-health-panels-panel
+      GF_LOG_FILTERS: plugin.devhealth-devhealthpanels-panel:debug
+      GF_LOG_LEVEL: debug
+      GF_DATAPROXY_LOGGING: 1
     ports:
       - "3000:3000"
     depends_on:
