chore(grafana): resolve linting and plugin validation issues
### Summary of Updates
- **Linting Fixes**:
  - Refactored DeveloperLandscapePanel.tsx and InvestmentFlowPanel.tsx to use React Hooks unconditionally at the top level.
  - Wrapped investmentOptions in useMemo to fix exhaustive dependency warnings.
  - Replaced deprecated theme.shape.borderRadius with theme.shape.radius.default.
  - Replaced deprecated .get() on data frame fields with array index access.
- **Plugin Validation**:
  - Updated plugin ID to devhealth-ops-panel to meet Grafana's ID pattern requirements.
  - Removed GrafanaPluginMetaExtractor from Webpack config to prevent the invalid generated property in plugin.json.
  - Updated LICENSE file with actual copyright year and owner.
  - Added a sponsorship link to plugin.json.
- **Global Configuration**:
  - Updated all dashboards to use the new devhealth-ops-panel type.
  - Updated compose.yml and README.md to reflect the new plugin ID for unsigned loading.

--- a/grafana/dashboards/investment_areas.json
+++ b/grafana/dashboards/investment_areas.json
@@ -20,8 +20,7 @@
     {
       "id": 1,
       "title": "Investment Flow",
-      "type": "devhealth-dev-health-panels-panel",
-      "datasource": {
+              "type": "devhealth-ops-panel",      "datasource": {
         "type": "grafana-clickhouse-datasource",
         "uid": "clickhouse"
       },
