--- a/compose.yml
+++ b/compose.yml
@@ -34,7 +34,7 @@ services:
       GF_AUTH_ANONYMOUS_ENABLED: true
       GF_AUTH_ANONYMOUS_ORG_ROLE: Admin
       GF_AUTH_DISABLE_LOGIN_FORM: true
-      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: devhealth-dev-health-panels-panel
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: devhealth-ops-panel
       GF_LOG_FILTERS: plugin.devhealth-devhealthpanels-panel:debug
       GF_LOG_LEVEL: debug
       GF_DATAPROXY_LOGGING: 1
