--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,12 +16,13 @@ jobs:
       contents: read
       id-token: write # Mandatory for trusted publishing
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+        steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+    
+        - name: Set up Python        uses: actions/setup-python@v5
         with:
           python-version: "3.12"
 
